# sea-orm-test

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/entity/: Cargo.toml
app/entity/src/: post.rs
app/migration/: Cargo.toml
app/migration/src/: lib.rs  m20230516_073733_add_created_at_and_updated_at_to_table.rs
app/src/: lib.rs  main.rs
app/tests/: test.rs
docker/postgres/: Dockerfile
docker/rust/: Dockerfile
